# mvxd-leptos

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.Docker.md  README.md
.github/workflows/: docker.yml  rust.yml
style/: output.css
